# AISalon

./: .dockerignore  .env.production.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  README.md  check_diagrams.py  deploy.sh  docker-compose.yml  pyproject.toml  trigger_analysis.py
deploy/: nginx.conf
openspec/: config.yaml
openspec/changes/archive/2026-04-16-mysql-migration-and-project-knowledge-base/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-16-mysql-migration-and-project-knowledge-base/specs/github-integration/: spec.md
openspec/changes/archive/2026-04-28-smart-data-extract/: tasks.md
openspec/changes/smart-data-extract/: proposal.md
openspec/specs/ai-analysis-engine/: spec.md
openspec/specs/env-config/: spec.md
openspec/specs/mysql-persistence/: spec.md
openspec/specs/project-knowledge-base/: spec.md
src/: app.py  config.py  email_service.py  models.py  requirements.txt
src/analytics/: analysis.py  data_loader.py  visualization.py
src/events/: AGENTS.md  models.py  routes.py  services.py
src/integrations/: github_client.py
src/projects/: ai_analyzer.py  routes.py  services.py
src/static/: styles.css
src/templates/: 404.html  500.html  base.html  index.html
src/templates/events/: detail.html  list.html
src/templates/projects/: detail.html  list.html  search.html
src/templates/users/: admin.html  login.html  profile.html
src/types/: index.py
src/users/: AGENTS.md  models.py  routes.py  services.py
tests/: test_events.py  test_projects.py  test_repo_url_parser.py  test_users.py
(+1 files in other folders)
