[tool]
name = "event-platform"
version = "0.1.0"
description = "A platform for managing events and users."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
flask = "^2.0"
flask_sqlalchemy = "^2.5"
flask_migrate = "^3.1"
pandas = "^1.3"
numpy = "^1.21"
matplotlib = "^3.4"